style: apply Google code style guidelines